force-app/main/default/objects/SAIdEnq__c/SAIdEnq__c.object-meta.xml
<CustomObject>
    <label>SAIdEnq</label>
    <nameField>
        <label>SAIdEnq Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAIdEnqs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>