force-app/main/default/objects/SAIdEnq__c/fields/SAId__c.field-meta.xml
<CustomField>
    <fullName>SAId__c</fullName>
    <label>SAId</label>
    <length>14</length>
    <type>Text</type>
</CustomField>