force-app/main/default/objects/SAIdEnq__c/fields/SAIdCitizenShip__c.field-meta.xml
<CustomField>
    <fullName>SAIdCitizenShip__c</fullName>
    <label>SAIdCitizenShip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>