force-app/main/default/objects/SAIdEnq__c/fields/SAIdDob__c.field-meta.xml
<CustomField>
    <fullName>SAIdDob__c</fullName>
    <label>SAIdDob</label>
    <length>10</length>
    <type>Text</type>
</CustomField>