force-app/main/default/objects/SAIdEnq__c/fields/SAIdGender__c.field-meta.xml
<CustomField>
    <fullName>SAIdGender__c</fullName>
    <label>SAIdGender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>