force-app/main/default/objects/SAIdEnq__c/fields/SAIdNoSearched__c.field-meta.xml
<CustomField>
    <fullName>SAIdNoSearched__c</fullName>
    <label>SAIdNoSearched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>